# nameless_carpool

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CMakeUtils.cmake  README.MD
doc/: README.MD  debugInput.json  nameless_carpool.software.usage.txt
libs/: README.MD
libs/date_3.0.1/src/: tz.cpp
libs/mysql_connector_arm_static/: INFO_BIN  INFO_SRC
libs/mysql_connector_arm_static/include/mysqlx/common/: util.h
libs/mysql_connector_arm_static/include/mysqlx/devapi/: common.h
libs/nlohmann_json_3.10.5/: TOM.README.MD
makefiles/: cmake_src.mk  src.mk  src_test.mk  test_makefile.mk
mysql_script/: bak.sql  init_database.mysql.copy.sql  init_database.mysql.sql  tmp.sql
src/: main.cpp
src/control/: application.cpp  application.h  db_proxy.cpp  db_proxy.h
src/db/: sql_util.cpp  sql_util.h
src/db/exten/: README.MD
src/db/model/: base_model.h  base_time.cpp  base_time.h  include_db_model.cpp  include_db_model.h  travel_info.cpp  travel_info.h  user_info.cpp  user_info.h
src/db/sql/: db_include.h  db_manager.cpp  db_manager.h  mysql_util.h  sql_util.h  table_desc.cpp  table_desc.h
src/json/model/: user_json.cpp
src/model/: response_body.cpp  response_body.h  user.h
src/net/: api.cpp  api.h  http_util.cpp  http_util.h
src/net/api/: authenticate.cpp  authenticate.h  authenticate_m.h  readme.md
src/net/client/: a_map.cpp  a_map.h
src/net/drogon_proxy/: web_client.cpp  web_client.h  web_server.cpp  web_server.h
src/net/model/: authenticate.h  find_xxx.h  input_tip.h  response_body.h
src/test_code/: test_drogon.h  text_rxcxx.cpp  text_rxcxx.h
src/utils/: all_include.h  common.cpp  common.h  constant.cpp  constant.h  container.h  enum_util.h  fcgi_util.h  http_util.cpp  http_util.h  input_check.cpp  input_check.h  linux_os.cpp  linux_os.h  log_utils.cpp  log_utils.h  tom_string_utils.cpp  tom_string_utils.h
src/utils/custom/: optional.h
src/utils/json/: include_json.cpp  include_json.h  json_util.h
src/utils/json/model/: user_json.cpp
src/utils/macro/: enum_util.h  for_model.h  macro_base.h  struct_field_name.h
src_test/: date_time.cpp  date_time.h  date_time.run  main.cpp  main2.cpp  main2.run  mysql_db.cpp  mysql_db.h  user.h
src_test/2022-09-02-test/: main.cpp  one_header.cpp  one_header.h
src_test/2022-09-06/: result.  result.run  test3.cpp
src_test/2022-09-15/: main.cpp  main.run
src_test/2022-09-19/: main.cpp
src_test/2022-09-22/: main.cpp
src_test/2022-09-27/: date_time.run  main.cpp  main.预处理.cpp
src_test/2022-10-05/: main.cpp  main.run  main2.cpp
src_test/compilation_test/: prog.cpp  prog.preprocessing.cpp  prog.run  prog.s
src_test/compilation_test_2/: beijing_shope.cpp  main.cpp  result.run  shope.cpp  shope.h  tianjin_shope.cpp  tianjin_shope.h
src_test/compilation_test_3/: beijing_shope.cpp  beijing_shope.h  main.cpp  result.run  shope.h
src_test/compilation_test_4/: main.cpp  shope.cpp  tianjin_shope.cpp
